feature(filtro e export) : filtrando onchange na pesquisa mais opção de export desses dados

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,12 @@ button {
   cursor: pointer;
 }
 
+.ov-icon {
+  width: 20px;
+  height: 20px;
+}
+
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
