--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ a:hover {
   color: #535bf2;
 }
 
+ 
 body {
   margin: 0;
   display: flex;
@@ -49,11 +50,22 @@ h1 {
 
 button {
   cursor: pointer;
+  padding: 2px 4px;
 }
 
 .ov-icon {
   width: 20px;
   height: 20px;
+}
+
+input {
+  flex: 1;
+  padding: 8px;
+}
+
+.danger {
+  border: #923131 2px solid;
+  background-color: #242424;
 }
 
 
